--- a/fact5.ipynb
+++ b/fact5.ipynb
@@ -18,6 +18,8 @@
     "[Source](https://www.eia.gov/petroleum/drilling/#tabs-summary-1)    \n",
     "Gas to kw/h: 1 m^3 gas to 8.816 kw/h, 1ft^3 = 0.028 m^3   \n",
     "[Source](https://www.volker-quaschning.de/datserv/faktoren/index_e.php)    \n",
+    "Number of rigs operatering: 61   \n",
+    "[Source](http://insights.energentgroup.com/weekly-rig-counts-gas-in-marcellus)    \n",
     "\n",
     "Assumptions:\n",
     "* Every 1 million spent on the rig is equivalent to consistent increase in ft^3 gas produced\n",
@@ -46,8 +48,9 @@
    "source": [
     "from decimal import Decimal\n",
     "\n",
+    "num_rigs = 61\n",
     "average_cost_rig = sum([4.9e6, 8.3e6])/2\n",
-    "barrel_day = 1.5e7\n",
+    "barrel_day = 1.5e7/num_rigs\n",
     "barrel_year = barrel_day*365\n",
     "kwh_year = barrel_year * (0.028) * (8.816)\n",
     "\n",
