--- a/fact5.ipynb
+++ b/fact5.ipynb
@@ -30,6 +30,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Results for $ 1m over 30 years:\n",
+    "Assumed: 400m kwh\n",
+    "Average rig cost: 100m kwh\n",
+    "Cheapest rig cost: 136m kwh\n",
+    "Expensive rig cost: 80m kwh\n",
+    "Average rig + upkeep: 19m kwh"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -134,14 +146,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kwh per million in year:  2.95e+6  kwh\n"
+      "kwh per million in year:  2.95e+6  kwh\n",
+      "kwh per million in 30 years:  1.96e+7  kwh\n"
      ]
     }
    ],
@@ -163,9 +176,11 @@
     "\n",
     "# calculate kwh per million dollar spent on rig\n",
     "kwh_year_per_million = kwh_year / (average_cost_rig+365*2500) *1e6\n",
+    "kwh_30year_per_million = (kwh_year / (average_cost_rig+365*2500*30) *1e6)*30\n",
     "\n",
     "\n",
-    "print(\"kwh per million in year: \",\"{:.2e}\".format(Decimal(str(kwh_year_per_million))), \" kwh\")\n"
+    "print(\"kwh per million in year: \",\"{:.2e}\".format(Decimal(str(kwh_year_per_million))), \" kwh\")\n",
+    "print(\"kwh per million in 30 years: \",\"{:.2e}\".format(Decimal(str(kwh_30year_per_million))), \" kwh\")\n"
    ]
   },
   {
