--- a/fact5.ipynb
+++ b/fact5.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5    \n",
+    "## Fact 5    \n",
     "Cost of rig:  4.9 million to 8.3 million    \n",
     "[Source](https://www.eia.gov/analysis/studies/drilling/pdf/upstream.pdf)    \n",
     "Barrels/day (Feb 2019): 15 million ft^3    \n",
@@ -33,12 +33,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Results for $ 1m over 30 years:\n",
-    "Assumed: 400m kwh\n",
-    "Average rig cost: 100m kwh\n",
-    "Cheapest rig cost: 136m kwh\n",
-    "Expensive rig cost: 80m kwh\n",
-    "Average rig + upkeep: 19m kwh"
+    "#### Results for $ 1m over 30 years:    \n",
+    "\n",
+    "__Assumed__ :    \n",
+    "* 400m kwh    \n",
+    "\n",
+    "__Average rig cost__:   \n",
+    "* 100m kwh            \n",
+    "\n",
+    "__Cheapest rig cost__:      \n",
+    "* 136m kwh        \n",
+    "\n",
+    "__Expensive rig cost__:   \n",
+    "* 80m kwh    \n",
+    "\n",
+    "__Average rig + upkeep__:      \n",
+    "* 19m kwh    "
    ]
   },
   {
