--- a/fact5.ipynb
+++ b/fact5.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Results for $ 1m over 30 years:    \n",
+    "#### Results for $ 1mil over 30 years:    \n",
     "\n",
     "__Assumed__ :    \n",
     "* 400m kwh    \n",
